# BoingSearch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  boingsearch.service
assets/: 404.html  censorwords.txt  config.toml.example  index.html
assets/static/: changelog.html  support.html
src/: lib.rs  main.rs
src/server/: freeserp.rs  mod.rs  search.rs  simplifier.rs
src/server/image/: mod.rs
src/server/search/: duckduckprovider.rs  mod.rs  serpapiprovider.rs  view.rs
