[package]
name = "boing-search"
authors = ["Aleksandr Sharikhin <anihirash@gmail.com>"]
version = "0.1.0"
edition = "2024"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
ammonia = "4.1.2"
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json", "http1", "tokio"] }
colog = "1.4.0"
deunicode = "1.6.2"
duckduckgo = { version = "0.2.0", features = ["tokio"] }
log = "0.4.28"
maplit = "1.0.2"
readable-readability = "0.4.0"
reqwest = {version = "0.11.27", features=["cookies", "json"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
serpapi-search-rust = "0.1.1"
templr = "0.2.4"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
url = { version = "2.5.7", features = ["std", "serde" ] }
urlencoding = "2.1.3"
